--- a/views/home.html
+++ b/views/home.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navigation">
             <div class="nav-bar-1">
-                <a href=""><img src="/img/logo-mercado-liebre.svg" alt=""></a>
+                <a href='.'><img src="/img/logo-mercado-liebre.svg" alt=""></a>
                 <div class="boton-form">
                     <input type="text" placeholder="Buscar productos, marcas, etc">
                     <button class=""><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -33,7 +33,7 @@
                 </ul>
                 <ul id="menu-2">
                     <li><a href='/registro'>Crea tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
-                    <li><a href="#">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                    <li><a href='/login'>Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
                     <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
                 </ul>  
             </div>
