--- a/views/register.html
+++ b/views/register.html
@@ -11,7 +11,7 @@
     <header>
         <nav class="navigation">
             <div class="nav-bar-1">
-                <a href=""><img src="/img/logo-mercado-liebre.svg" alt=""></a>
+                <a href='/'><img src="/img/logo-mercado-liebre.svg" alt=""></a>
                 <div class="boton-form">
                     <input type="text" placeholder="Buscar productos, marcas, etc">
                     <button class=""><i class="fa-solid fa-magnifying-glass"></i></button>
@@ -32,8 +32,8 @@
                     <li><a href="#">Ayuda</a></li>
                 </ul>
                 <ul id="menu-2">
-                    <li><a href="#">Crea tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
-                    <li><a href="#">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
+                    <li><a href="./registro">Crea tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
+                    <li><a href="./login">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
                     <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
                 </ul>  
             </div>
@@ -80,7 +80,7 @@
                     <input class="w-50" type="text" placeholder="Confirma tu contraseña">
                 </div>
                 <div class="seventh-row">
-                    <button class="send" type="submit">Enviar</button>
+                    <a href='.'><button class="send" type="button">Enviar</button></a>
                     <button class="reset" type="reset">Borrar</button>
                 </div>
             </form>
